Sun Oct 26 11:58:37 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Support LINGUAS environment variable to control installation of
	localised manual pages. Reported by Mike Frysinger.

	* m4/man-po4a.m4, m4/man-linguas.m4: New files.
	* configure.ac: Call MAN_PO4A instead of inline code. Remove NLS and
	  PO4A Automake conditionals, no longer needed. Call MAN_LINGUAS.
	* man/LINGUAS, man/LINGUAS.po4a: New files.
	* man/Makefile.am (SUBDIRS): Set to $(MAN_SUBDIRS) rather than
	  computing the list here.
	  (DIST_SUBDIRS): Add, since we no longer use Automake conditionals.
	* docs/NEWS: Document this.

Sun Oct 26 01:53:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for lzma.
	* include/comp_src.h.in (comp_list): Add lzma.
	* include/manconfig.h.in: Define UNLZMA.
	* docs/NEWS: Document this.

Wed Oct  1 12:19:29 BST 2008  Colin Watson  <cjwatson@debian.org>

	* docs/TODO: Remove entry about Berkeley DB's error handling, fixed
	  in Berkeley DB 4.1 (see http://bugs.debian.org/180379).

Tue Sep 30 16:39:19 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Norwegian Bokmål and
	  Norwegian Nynorsk (following a comment on
	  http://www.linuxfromscratch.org/lfs/view/development/chapter06/man-db.html).

Sun Sep 28 11:35:18 BST 2008  Colin Watson  <cjwatson@debian.org>

	* manual/files.me (NLS manual pages): Describe automatic detection
	  of manual pages encoded in UTF-8. Recommend that character set
	  components not be used in directory names.

Sun Sep 28 11:30:40 BST 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for GDBM before Berkeley DB.
	* docs/man-db.lsm: List GDBM before Berkeley DB.
	* manual/db.me (Database types): Explain why GDBM is preferred.
	* manual/intro.me (Arguments to configure), README (Non-generic
	  arguments to configure): Update --with-db description.
	* docs/NEWS: Document this, with a note to distributors on upgrade
	  handling.
